# cutefish-filemanager

./: .gitignore  CMakeLists.txt  application.cpp  qml.qrc
desktop/: desktopview.cpp
dialogs/: filepropertiesdialog.cpp
draganddrop/: declarativemimedata.cpp
helper/: datehelper.cpp
model/: dirlister.cpp  dirlister.h  foldermodel.cpp  foldermodel.h
qml/: FolderGridItem.qml  FolderGridView.qml  FolderListItem.qml  FolderListView.qml  FolderPage.qml  GlobalSettings.qml  OptionsMenu.qml  PathBar.qml  SideBar.qml  Theme.qml  main.qml
qml/Controls/: IconButton.qml
qml/Desktop/: Main.qml  Wallpaper.qml
qml/Dialogs/: CreateFolderDialog.qml  DeleteDialog.qml  EmptyTrashDialog.qml  OpenWithDialog.qml  PropertiesDialog.qml
thumbnailer/: thumbnailcache.cpp
translations/: ar_AA.ts  be_BY.ts  be_Latn.ts  bg_BG.ts  bs_BA.ts  cs_CZ.ts  da_DK.ts  de_DE.ts  en_US.ts  eo_XX.ts  es_ES.ts  es_MX.ts  fa_IR.ts  fi_FI.ts  fr_FR.ts  he_IL.ts  hi_IN.ts  hu_HU.ts  id_ID.ts  ie.ts  it_IT.ts  ja_JP.ts  lt_LT.ts  lv_LV.ts  ml_IN.ts  nb_NO.ts  ne_NP.ts  pl_PL.ts  pt_BR.ts  pt_PT.ts  ro_RO.ts  ru_RU.ts  si_LK.ts  sk_SK.ts  so.ts  sr_RS.ts  sv_SE.ts  sw.ts  ta_IN.ts  tr_TR.ts  (+4 more)
widgets/: rubberband.cpp  rubberband.h
